[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/world/Sky.gd" type="Script" id=3]
[ext_resource path="res://scenes/world/tileset.png" type="Texture" id=4]
[ext_resource path="res://scenes/world/Particles.gd" type="Script" id=6]
[ext_resource path="res://scenes/shrine/Shrine.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/world/EnemySpawner.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/world/Enemies.gd" type="Script" id=9]
[ext_resource path="res://scenes/items/CloudPotion.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/items/WindPotion.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/world/ItemSpawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/world/Items.gd" type="Script" id=13]
[ext_resource path="res://scenes/vfx/CloudShadows.tscn" type="PackedScene" id=14]
[ext_resource path="res://ui/start/StartMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://ui/start/cloud.png" type="Texture" id=16]
[ext_resource path="res://scenes/world/World.gd" type="Script" id=17]

[sub_resource type="TileSet" id=1]
0/name = "grass"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 16 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [ Vector3( 0, 0, 8 ), Vector3( 1, 0, 2 ), Vector3( 2, 0, 2 ), Vector3( 3, 0, 2 ), Vector3( 4, 0, 2 ), Vector3( 5, 0, 2 ) ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../WorldCamera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160, -176 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "pan_down"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("../WorldCamera:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, -176 ), Vector2( 160, 48 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../Ground/Player")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_camera_current"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "signal_game_start"
} ]
}

[node name="World" type="Node2D"]
script = ExtResource( 17 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -458760, 0, 4, -458759, 0, 0, -458758, 0, 7, -458757, 0, 5, -458756, 0, 1, -458755, 0, 1, -458754, 0, 7, -458753, 0, 0, -524288, 0, 0, -524287, 0, 6, -524286, 0, 4, -524285, 0, 2, -524284, 0, 5, -524283, 0, 5, -524282, 0, 0, -524281, 0, 2, -524280, 0, 2, -524279, 0, 4, -524278, 0, 5, -524277, 0, 1, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -524273, 0, 0, -524272, 0, 4, -524271, 0, 1, -524270, 0, 5, -524269, 0, 4, -524268, 0, 0, -524267, 0, 2, -524266, 0, 4, -524265, 0, 4, -524264, 0, 2, -524263, 0, 0, -524262, 0, 0, -524261, 0, 1, -393224, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 4, -393219, 0, 2, -393218, 0, 0, -393217, 0, 6, -458752, 0, 1, -458751, 0, 0, -458750, 0, 4, -458749, 0, 2, -458748, 0, 1, -458747, 0, 4, -458746, 0, 3, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 6, -458740, 0, 3, -458739, 0, 4, -458738, 0, 0, -458737, 0, 0, -458736, 0, 0, -458735, 0, 0, -458734, 0, 0, -458733, 0, 7, -458732, 0, 1, -458731, 0, 6, -458730, 0, 6, -458729, 0, 0, -458728, 0, 1, -458727, 0, 1, -458726, 0, 0, -458725, 0, 3, -327688, 0, 0, -327687, 0, 4, -327686, 0, 4, -327685, 0, 4, -327684, 0, 3, -327683, 0, 0, -327682, 0, 2, -327681, 0, 6, -393216, 0, 4, -393215, 0, 4, -393214, 0, 4, -393213, 0, 5, -393212, 0, 0, -393211, 0, 2, -393210, 0, 0, -393209, 0, 1, -393208, 0, 4, -393207, 0, 3, -393206, 0, 0, -393205, 0, 0, -393204, 0, 6, -393203, 0, 2, -393202, 0, 0, -393201, 0, 3, -393200, 0, 0, -393199, 0, 1, -393198, 0, 3, -393197, 0, 5, -393196, 0, 4, -393195, 0, 0, -393194, 0, 6, -393193, 0, 0, -393192, 0, 7, -393191, 0, 1, -393190, 0, 0, -393189, 0, 4, -262152, 0, 0, -262151, 0, 5, -262150, 0, 2, -262149, 0, 3, -262148, 0, 0, -262147, 0, 1, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 6, -327675, 0, 7, -327674, 0, 0, -327673, 0, 1, -327672, 0, 0, -327671, 0, 3, -327670, 0, 0, -327669, 0, 1, -327668, 0, 4, -327667, 0, 0, -327666, 0, 3, -327665, 0, 4, -327664, 0, 2, -327663, 0, 0, -327662, 0, 0, -327661, 0, 6, -327660, 0, 3, -327659, 0, 4, -327658, 0, 4, -327657, 0, 0, -327656, 0, 0, -327655, 0, 2, -327654, 0, 1, -327653, 0, 0, -196616, 0, 5, -196615, 0, 1, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 3, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 4, -262142, 0, 5, -262141, 0, 0, -262140, 0, 0, -262139, 0, 5, -262138, 0, 4, -262137, 0, 2, -262136, 0, 6, -262135, 0, 0, -262134, 0, 2, -262133, 0, 2, -262132, 0, 0, -262131, 0, 2, -262130, 0, 0, -262129, 0, 1, -262128, 0, 1, -262127, 0, 1, -262126, 0, 0, -262125, 0, 2, -262124, 0, 4, -262123, 0, 0, -262122, 0, 0, -262121, 0, 0, -262120, 0, 0, -262119, 0, 3, -262118, 0, 0, -262117, 0, 7, -131080, 0, 5, -131079, 0, 0, -131078, 0, 2, -131077, 0, 0, -131076, 0, 5, -131075, 0, 0, -131074, 0, 3, -131073, 0, 2, -196608, 0, 5, -196607, 0, 5, -196606, 0, 0, -196605, 0, 5, -196604, 0, 0, -196603, 0, 0, -196602, 0, 3, -196601, 0, 0, -196600, 0, 0, -196599, 0, 2, -196598, 0, 6, -196597, 0, 6, -196596, 0, 2, -196595, 0, 0, -196594, 0, 0, -196593, 0, 3, -196592, 0, 0, -196591, 0, 0, -196590, 0, 6, -196589, 0, 1, -196588, 0, 0, -196587, 0, 0, -196586, 0, 6, -196585, 0, 5, -196584, 0, 3, -196583, 0, 5, -196582, 0, 1, -196581, 0, 3, -65544, 0, 0, -65543, 0, 5, -65542, 0, 2, -65541, 0, 0, -65540, 0, 2, -65539, 0, 2, -65538, 0, 4, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 1, -131051, 0, 1, -131050, 0, 5, -131049, 0, 6, -131048, 0, 3, -131047, 0, 4, -131046, 0, 0, -131045, 0, 6, -8, 0, 5, -7, 0, 4, -6, 0, 7, -5, 0, 3, -4, 0, 6, -3, 0, 7, -2, 0, 0, -1, 0, 5, -65536, 0, 0, -65535, 0, 1, -65534, 0, 1, -65533, 0, 0, -65532, 0, 7, -65531, 0, 1, -65530, 0, 1, -65529, 0, 2, -65528, 0, 0, -65527, 0, 5, -65526, 0, 5, -65525, 0, 2, -65524, 0, 3, -65523, 0, 0, -65522, 0, 7, -65521, 0, 0, -65520, 0, 0, -65519, 0, 2, -65518, 0, 6, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 5, -65512, 0, 0, -65511, 0, 4, -65510, 0, 3, -65509, 0, 3, 65528, 0, 3, 65529, 0, 3, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 4, 65534, 0, 0, 65535, 0, 2, 0, 0, 0, 1, 0, 0, 2, 0, 5, 3, 0, 1, 4, 0, 5, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 1, 9, 0, 2, 10, 0, 3, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 4, 15, 0, 0, 16, 0, 4, 17, 0, 0, 18, 0, 1, 19, 0, 3, 20, 0, 0, 21, 0, 0, 22, 0, 7, 23, 0, 4, 24, 0, 0, 25, 0, 5, 26, 0, 4, 27, 0, 4, 131064, 0, 0, 131065, 0, 5, 131066, 0, 5, 131067, 0, 3, 131068, 0, 3, 131069, 0, 6, 131070, 0, 0, 131071, 0, 0, 65536, 0, 5, 65537, 0, 0, 65538, 0, 0, 65539, 0, 3, 65540, 0, 6, 65541, 0, 7, 65542, 0, 4, 65543, 0, 7, 65544, 0, 0, 65545, 0, 0, 65546, 0, 1, 65547, 0, 0, 65548, 0, 0, 65549, 0, 7, 65550, 0, 3, 65551, 0, 4, 65552, 0, 7, 65553, 0, 1, 65554, 0, 0, 65555, 0, 4, 65556, 0, 0, 65557, 0, 4, 65558, 0, 7, 65559, 0, 1, 65560, 0, 4, 65561, 0, 0, 65562, 0, 0, 65563, 0, 4, 196600, 0, 0, 196601, 0, 6, 196602, 0, 0, 196603, 0, 0, 196604, 0, 5, 196605, 0, 1, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 1, 131075, 0, 3, 131076, 0, 3, 131077, 0, 2, 131078, 0, 2, 131079, 0, 0, 131080, 0, 0, 131081, 0, 5, 131082, 0, 2, 131083, 0, 0, 131084, 0, 0, 131085, 0, 2, 131086, 0, 7, 131087, 0, 2, 131088, 0, 4, 131089, 0, 4, 131090, 0, 4, 131091, 0, 0, 131092, 0, 5, 131093, 0, 2, 131094, 0, 6, 131095, 0, 0, 131096, 0, 5, 131097, 0, 1, 131098, 0, 3, 131099, 0, 3, 262136, 0, 1, 262137, 0, 4, 262138, 0, 2, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 4, 262143, 0, 2, 196608, 0, 6, 196609, 0, 3, 196610, 0, 0, 196611, 0, 5, 196612, 0, 0, 196613, 0, 1, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 6, 196618, 0, 7, 196619, 0, 0, 196620, 0, 2, 196621, 0, 0, 196622, 0, 4, 196623, 0, 6, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 4, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 5, 196634, 0, 0, 196635, 0, 4, 327672, 0, 4, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 2, 327679, 0, 7, 262144, 0, 0, 262145, 0, 4, 262146, 0, 2, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 1, 262151, 0, 6, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 3, 262156, 0, 6, 262157, 0, 0, 262158, 0, 0, 262159, 0, 1, 262160, 0, 5, 262161, 0, 5, 262162, 0, 2, 262163, 0, 0, 262164, 0, 1, 262165, 0, 0, 262166, 0, 0, 262167, 0, 1, 262168, 0, 0, 262169, 0, 4, 262170, 0, 0, 262171, 0, 4, 393208, 0, 2, 393209, 0, 0, 393210, 0, 3, 393211, 0, 4, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 1, 327682, 0, 2, 327683, 0, 0, 327684, 0, 0, 327685, 0, 7, 327686, 0, 1, 327687, 0, 3, 327688, 0, 1, 327689, 0, 4, 327690, 0, 0, 327691, 0, 6, 327692, 0, 4, 327693, 0, 4, 327694, 0, 5, 327695, 0, 0, 327696, 0, 5, 327697, 0, 7, 327698, 0, 6, 327699, 0, 3, 327700, 0, 6, 327701, 0, 1, 327702, 0, 1, 327703, 0, 7, 327704, 0, 5, 327705, 0, 0, 327706, 0, 0, 327707, 0, 3, 458744, 0, 4, 458745, 0, 1, 458746, 0, 1, 458747, 0, 0, 458748, 0, 1, 458749, 0, 0, 458750, 0, 0, 458751, 0, 1, 393216, 0, 2, 393217, 0, 5, 393218, 0, 7, 393219, 0, 6, 393220, 0, 7, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 2, 393225, 0, 5, 393226, 0, 0, 393227, 0, 4, 393228, 0, 5, 393229, 0, 6, 393230, 0, 0, 393231, 0, 0, 393232, 0, 2, 393233, 0, 2, 393234, 0, 2, 393235, 0, 4, 393236, 0, 3, 393237, 0, 0, 393238, 0, 4, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 524280, 0, 0, 524281, 0, 3, 524282, 0, 2, 524283, 0, 5, 524284, 0, 3, 524285, 0, 7, 524286, 0, 0, 524287, 0, 4, 458752, 0, 5, 458753, 0, 5, 458754, 0, 2, 458755, 0, 0, 458756, 0, 0, 458757, 0, 3, 458758, 0, 0, 458759, 0, 5, 458760, 0, 0, 458761, 0, 2, 458762, 0, 0, 458763, 0, 3, 458764, 0, 2, 458765, 0, 0, 458766, 0, 0, 458767, 0, 4, 458768, 0, 0, 458769, 0, 2, 458770, 0, 2, 458771, 0, 5, 458772, 0, 0, 458773, 0, 2, 458774, 0, 4, 458775, 0, 2, 458776, 0, 2, 458777, 0, 7, 458778, 0, 6, 458779, 0, 0, 589816, 0, 0, 589817, 0, 0, 589818, 0, 5, 589819, 0, 4, 589820, 0, 5, 589821, 0, 0, 589822, 0, 7, 589823, 0, 0, 524288, 0, 1, 524289, 0, 7, 524290, 0, 1, 524291, 0, 4, 524292, 0, 1, 524293, 0, 0, 524294, 0, 6, 524295, 0, 0, 524296, 0, 3, 524297, 0, 5, 524298, 0, 2, 524299, 0, 2, 524300, 0, 5, 524301, 0, 3, 524302, 0, 3, 524303, 0, 3, 524304, 0, 3, 524305, 0, 7, 524306, 0, 7, 524307, 0, 5, 524308, 0, 5, 524309, 0, 6, 524310, 0, 5, 524311, 0, 5, 524312, 0, 0, 524313, 0, 4, 524314, 0, 0, 524315, 0, 3, 655352, 0, 7, 655353, 0, 5, 655354, 0, 0, 655355, 0, 3, 655356, 0, 0, 655357, 0, 3, 655358, 0, 4, 655359, 0, 5, 589824, 0, 0, 589825, 0, 3, 589826, 0, 4, 589827, 0, 0, 589828, 0, 2, 589829, 0, 6, 589830, 0, 3, 589831, 0, 3, 589832, 0, 0, 589833, 0, 0, 589834, 0, 2, 589835, 0, 1, 589836, 0, 0, 589837, 0, 0, 589838, 0, 4, 589839, 0, 1, 589840, 0, 3, 589841, 0, 3, 589842, 0, 0, 589843, 0, 1, 589844, 0, 5, 589845, 0, 0, 589846, 0, 5, 589847, 0, 0, 589848, 0, 3, 589849, 0, 5, 589850, 0, 2, 589851, 0, 0, 720888, 0, 0, 720889, 0, 0, 720890, 0, 5, 720891, 0, 1, 720892, 0, 0, 720893, 0, 2, 720894, 0, 0, 720895, 0, 3, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 4, 655366, 0, 6, 655367, 0, 0, 655368, 0, 7, 655369, 0, 0, 655370, 0, 2, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 6, 655375, 0, 2, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 6, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 5, 655384, 0, 3, 655385, 0, 3, 655386, 0, 5, 655387, 0, 1, 786424, 0, 3, 786425, 0, 1, 786426, 0, 0, 786427, 0, 5, 786428, 0, 7, 786429, 0, 1, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 5, 720899, 0, 0, 720900, 0, 0, 720901, 0, 5, 720902, 0, 5, 720903, 0, 0, 720904, 0, 4, 720905, 0, 5, 720906, 0, 2, 720907, 0, 5, 720908, 0, 6, 720909, 0, 3, 720910, 0, 0, 720911, 0, 1, 720912, 0, 5, 720913, 0, 1, 720914, 0, 3, 720915, 0, 7, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 7, 720920, 0, 4, 720921, 0, 6, 720922, 0, 0, 720923, 0, 0, 851960, 0, 6, 851961, 0, 1, 851962, 0, 0, 851963, 0, 0, 851964, 0, 1, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 4, 786435, 0, 0, 786436, 0, 0, 786437, 0, 1, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 2, 786455, 0, 1, 786456, 0, 1, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 917496, 0, 1, 917497, 0, 4, 917498, 0, 4, 917499, 0, 1, 917500, 0, 7, 917501, 0, 6, 917502, 0, 0, 917503, 0, 6, 851968, 0, 4, 851969, 0, 3, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 1, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 7, 851980, 0, 5, 851981, 0, 5, 851982, 0, 7, 851983, 0, 2, 851984, 0, 0, 851985, 0, 2, 851986, 0, 0, 851987, 0, 5, 851988, 0, 3, 851989, 0, 0, 851990, 0, 4, 851991, 0, 4, 851992, 0, 3, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 983032, 0, 5, 983033, 0, 6, 983034, 0, 4, 983035, 0, 4, 983036, 0, 0, 983037, 0, 0, 983038, 0, 2, 983039, 0, 4, 917504, 0, 2, 917505, 0, 4, 917506, 0, 3, 917507, 0, 1, 917508, 0, 3, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 2, 917513, 0, 4, 917514, 0, 2, 917515, 0, 2, 917516, 0, 4, 917517, 0, 2, 917518, 0, 0, 917519, 0, 0, 917520, 0, 7, 917521, 0, 6, 917522, 0, 5, 917523, 0, 7, 917524, 0, 3, 917525, 0, 5, 917526, 0, 0, 917527, 0, 3, 917528, 0, 0, 917529, 0, 3, 917530, 0, 2, 917531, 0, 3, 1048568, 0, 2, 1048569, 0, 0, 1048570, 0, 6, 1048571, 0, 0, 1048572, 0, 6, 1048573, 0, 4, 1048574, 0, 2, 1048575, 0, 3, 983040, 0, 0, 983041, 0, 0, 983042, 0, 2, 983043, 0, 4, 983044, 0, 0, 983045, 0, 4, 983046, 0, 0, 983047, 0, 4, 983048, 0, 3, 983049, 0, 0, 983050, 0, 6, 983051, 0, 6, 983052, 0, 3, 983053, 0, 0, 983054, 0, 1, 983055, 0, 0, 983056, 0, 2, 983057, 0, 1, 983058, 0, 0, 983059, 0, 0, 983060, 0, 3, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 3, 983065, 0, 0, 983066, 0, 6, 983067, 0, 0, 1114104, 0, 4, 1114105, 0, 6, 1114106, 0, 3, 1114107, 0, 1, 1114108, 0, 0, 1114109, 0, 2, 1114110, 0, 0, 1114111, 0, 2, 1048576, 0, 6, 1048577, 0, 6, 1048578, 0, 0, 1048579, 0, 1, 1048580, 0, 5, 1048581, 0, 0, 1048582, 0, 3, 1048583, 0, 5, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 4, 1048589, 0, 0, 1048590, 0, 1, 1048591, 0, 3, 1048592, 0, 3, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1179640, 0, 0, 1179641, 0, 4, 1179642, 0, 3, 1179643, 0, 6, 1179644, 0, 3, 1179645, 0, 3, 1179646, 0, 4, 1179647, 0, 2, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 2, 1114115, 0, 0, 1114116, 0, 1, 1114117, 0, 3, 1114118, 0, 1, 1114119, 0, 7, 1114120, 0, 7, 1114121, 0, 4, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 3, 1114126, 0, 0, 1114127, 0, 6, 1114128, 0, 0, 1114129, 0, 3, 1114130, 0, 4, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 1, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 2, 1114138, 0, 0, 1114139, 0, 0, 1245176, 0, 5, 1245177, 0, 1, 1245178, 0, 0, 1245179, 0, 1, 1245180, 0, 0, 1245181, 0, 0, 1245182, 0, 0, 1245183, 0, 2, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 7, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 3, 1179654, 0, 2, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 3, 1179658, 0, 3, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 3, 1179664, 0, 4, 1179665, 0, 2, 1179666, 0, 0, 1179667, 0, 2, 1179668, 0, 0, 1179669, 0, 5, 1179670, 0, 2, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 3, 1310712, 0, 0, 1310713, 0, 4, 1310714, 0, 5, 1310715, 0, 2, 1310716, 0, 5, 1310717, 0, 4, 1310718, 0, 0, 1310719, 0, 0, 1245184, 0, 5, 1245185, 0, 0, 1245186, 0, 2, 1245187, 0, 7, 1245188, 0, 7, 1245189, 0, 5, 1245190, 0, 3, 1245191, 0, 6, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 4, 1245195, 0, 0, 1245196, 0, 3, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 1, 1245200, 0, 0, 1245201, 0, 3, 1245202, 0, 1, 1245203, 0, 3, 1245204, 0, 3, 1245205, 0, 1, 1245206, 0, 4, 1245207, 0, 0, 1245208, 0, 5, 1245209, 0, 4, 1245210, 0, 1, 1245211, 0, 3 )

[node name="Ground" type="YSort" parent="."]

[node name="Player" parent="Ground" instance=ExtResource( 1 )]
unique_name_in_owner = true
position = Vector2( 160, 48 )

[node name="Shrine" parent="Ground" instance=ExtResource( 7 )]
position = Vector2( 160, 40 )

[node name="Enemies" type="YSort" parent="Ground"]
script = ExtResource( 9 )

[node name="Items" type="YSort" parent="Ground"]
script = ExtResource( 13 )

[node name="WindPotion" parent="Ground/Items" instance=ExtResource( 11 )]
position = Vector2( 192, 48 )
collision_mask = 0

[node name="CloudPotion" parent="Ground/Items" instance=ExtResource( 10 )]
position = Vector2( 128, 48 )
collision_mask = 0

[node name="Sky" type="YSort" parent="."]
script = ExtResource( 3 )

[node name="Particles" type="YSort" parent="."]
script = ExtResource( 6 )

[node name="EnemySpawner" parent="." instance=ExtResource( 8 )]
unique_name_in_owner = true

[node name="ItemSpawner" parent="." instance=ExtResource( 12 )]
unique_name_in_owner = true
spawn_wait_time = 6.0
max_items_spawned = 6

[node name="CloudShadowParticles" parent="." instance=ExtResource( 14 )]
position = Vector2( 73, 112 )

[node name="CloudBorder" type="YSort" parent="."]
position = Vector2( -16, -304 )

[node name="Cloud" type="Sprite" parent="CloudBorder"]
position = Vector2( 100, 210 )
texture = ExtResource( 16 )

[node name="Cloud2" type="Sprite" parent="CloudBorder"]
position = Vector2( 151, 186 )
texture = ExtResource( 16 )

[node name="Cloud3" type="Sprite" parent="CloudBorder"]
position = Vector2( 284, 184 )
texture = ExtResource( 16 )

[node name="Cloud4" type="Sprite" parent="CloudBorder"]
position = Vector2( 185, 216 )
texture = ExtResource( 16 )

[node name="Cloud5" type="Sprite" parent="CloudBorder"]
position = Vector2( 89, 179 )
texture = ExtResource( 16 )

[node name="Cloud6" type="Sprite" parent="CloudBorder"]
position = Vector2( 36, 217 )
texture = ExtResource( 16 )

[node name="Cloud7" type="Sprite" parent="CloudBorder"]
position = Vector2( 14, 183 )
texture = ExtResource( 16 )

[node name="Cloud8" type="Sprite" parent="CloudBorder"]
position = Vector2( 212, 181 )
texture = ExtResource( 16 )

[node name="Cloud9" type="Sprite" parent="CloudBorder"]
position = Vector2( 259, 216 )
texture = ExtResource( 16 )

[node name="Cloud10" type="Sprite" parent="CloudBorder"]
position = Vector2( 329, 215 )
texture = ExtResource( 16 )

[node name="Cloud11" type="Sprite" parent="CloudBorder"]
position = Vector2( 127, 240 )
texture = ExtResource( 16 )

[node name="Cloud12" type="Sprite" parent="CloudBorder"]
position = Vector2( 333, 173 )
texture = ExtResource( 16 )

[node name="Cloud13" type="Sprite" parent="CloudBorder"]
position = Vector2( -39, 203 )
texture = ExtResource( 16 )

[node name="Cloud14" type="Sprite" parent="CloudBorder"]
position = Vector2( 382, 195 )
texture = ExtResource( 16 )

[node name="StartMenu" parent="." instance=ExtResource( 15 )]
pause_mode = 2
margin_left = 80.0
margin_top = -152.0
margin_right = 240.0
margin_bottom = -68.0

[node name="WorldCamera" type="Camera2D" parent="."]
pause_mode = 2
unique_name_in_owner = true
position = Vector2( 160, -176 )
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="WorldCamera"]
unique_name_in_owner = true
root_node = NodePath("../../StartMenu")
anims/RESET = SubResource( 3 )
anims/pan_down = SubResource( 2 )

[connection signal="spawn_triggered" from="EnemySpawner" to="Ground/Enemies" method="_on_EnemySpawner_spawn_triggered"]
[connection signal="item_spawn_triggered" from="ItemSpawner" to="Ground/Items" method="_on_ItemSpawner_item_spawn_triggered"]
[connection signal="play_button_pressed" from="StartMenu" to="." method="_on_StartMenu_play_button_pressed"]
